src/main/kotlin/com/example/brandcoordinator/common/error/dto/CommonErrorResponse.kt
package com.example.brandcoordinator.common.error.dto

data class CommonErrorResponse(
    val message: String,
)
